// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user should have the expected watchers 1`] = `
Array [
  Object {
    "@@redux-saga/IO": true,
    "FORK": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
  Object {
    "@@redux-saga/IO": true,
    "FORK": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
]
`;

exports[`user should match the login saga 1`] = `
Object {
  "@@redux-saga/IO": true,
  "TAKE": Object {
    "pattern": "USER_LOGIN_REQUEST",
  },
}
`;

exports[`user should match the logout saga 1`] = `
Object {
  "@@redux-saga/IO": true,
  "TAKE": Object {
    "pattern": "USER_LOGOUT_REQUEST",
  },
}
`;
